# network-power-meter

./: README.MD
smm-esp32/: CMakeLists.txt  partitions.csv  sdkconfig
smm-esp32/main/: CMakeLists.txt  config.h  initsys.c  initsys.h  smm.c  textmenu.c  textmenu.h
smm-esp32/main/calibration/: calibration.c  calibration.h
smm-esp32/main/menu/: menu.c  menu.h
smm-esp32/main/menu/main/: main.c  main.h  sampler.c
smm-esp32/main/sampler/: sampler.c  sampler.h  sampler_ringbuf.c  sampler_ringbuf.h
smm-esp32/main/webserver/: endpoint_calibration.c  endpoint_sampler_channels.c  endpoint_sampler_ctl.c  endpoint_serve_file.c  endpoint_ws.c  endpoints.h  webserver.c  webserver.h
smm-esp32/main/wifimgr/: menu.c  menu.h  wifimgr.c  wifimgr.h
smm-frontend/: angular.json  package-lock.json  package.json  tailwind.config.js
smm-frontend/src/: index.html
smm-frontend/src/app/: SMMMock.ts  WSConnection.ts  app-routing.module.ts  app.component.ts  main.service.ts  request-engine.service.ts
smm-frontend/src/app/scope/: ScopePageInterfaces.ts  scope.component.html  scope.component.ts
smm-frontend/src/app/scope/array-slider/: array-slider.component.html  array-slider.component.ts
smm-frontend/src/app/scope/meter-ctl/: meter-ctl.component.html  meter-ctl.component.ts
smm-frontend/src/app/scope/misc/: RangeDescriptions.ts
smm-frontend/src/app/scope/oscilloscope/: BlockProcessor.ts  Common.interface.ts  Oscilloscope.ts  Renderers.ts  ScopeStyle.ts  Util.ts
smm-pcb/: fp-info-cache  smm.kicad_pcb  smm.kicad_prl  smm.kicad_pro  smm.kicad_sch
(+2 files in other folders)
